ros_ws/src/log/build_2026-03-30_10-29-22/robo_rover/stdout_stderr.log
-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found Python3: /usr/bin/python3 (found version "3.10.12") found components: Interpreter 
-- Found rclpy: 3.3.19 (/opt/ros/humble/share/rclpy/cmake)
-- Found std_msgs: 4.9.0 (/opt/ros/humble/share/std_msgs/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found geometry_msgs: 4.9.0 (/opt/ros/humble/share/geometry_msgs/cmake)
-- Found sensor_msgs: 4.9.0 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found ament_lint_auto: 0.12.14 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the docstring style conventions in PEP 257
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/copperbottoms/code/Copperbottoms/ros_ws/src/build/robo_rover
Built target ament_cmake_python_copy_robo_rover
running egg_info
creating robo_rover.egg-info
writing robo_rover.egg-info/PKG-INFO
writing dependency_links to robo_rover.egg-info/dependency_links.txt
writing top-level names to robo_rover.egg-info/top_level.txt
writing manifest file 'robo_rover.egg-info/SOURCES.txt'
reading manifest file 'robo_rover.egg-info/SOURCES.txt'
writing manifest file 'robo_rover.egg-info/SOURCES.txt'
Built target ament_cmake_python_build_robo_rover_egg
-- Install configuration: ""
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/environment/pythonpath.sh
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/environment/pythonpath.dsv
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover-1.0.0-py3.10.egg-info
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover-1.0.0-py3.10.egg-info/PKG-INFO
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover-1.0.0-py3.10.egg-info/top_level.txt
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover-1.0.0-py3.10.egg-info/dependency_links.txt
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover-1.0.0-py3.10.egg-info/SOURCES.txt
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover/__init__.py
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover/rover_node.py
Listing '/home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover'...
Compiling '/home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover/__init__.py'...
Compiling '/home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover/rover_node.py'...
***   File "/home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/local/lib/python3.10/dist-packages/robo_rover/rover_node.py", line 298
    else
    ^^^^
SyntaxError: invalid syntax

-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/lib/robo_rover/rover_node
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/launch
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/launch/rover_launch.py
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/ament_index/resource_index/package_run_dependencies/robo_rover
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/ament_index/resource_index/parent_prefix_path/robo_rover
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/environment/ament_prefix_path.sh
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/environment/ament_prefix_path.dsv
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/environment/path.sh
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/environment/path.dsv
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/local_setup.bash
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/local_setup.sh
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/local_setup.zsh
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/local_setup.dsv
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/package.dsv
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/ament_index/resource_index/packages/robo_rover
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/cmake/robo_roverConfig.cmake
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/cmake/robo_roverConfig-version.cmake
-- Installing: /home/copperbottoms/code/Copperbottoms/ros_ws/src/install/robo_rover/share/robo_rover/package.xml
